update for modify xml.